--- a/IOSPROJECTAPP/Base.lproj/Main.storyboard
+++ b/IOSPROJECTAPP/Base.lproj/Main.storyboard
@@ -202,13 +202,14 @@
         <!--Main View Controller-->
         <scene sceneID="lHF-9Q-d6o">
             <objects>
-                <viewController title="Main View Controller" id="R7x-DF-rbJ" sceneMemberID="viewController">
+                <viewController title="Main View Controller" id="R7x-DF-rbJ" customClass="MainViewController" customModule="IOSPROJECTAPP" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="4f0-ZL-pW7">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="HELLO" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="joi-qj-uCt">
-                                <rect key="frame" x="122" y="313" width="53" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RII-F1-oAx">
+                                <rect key="frame" x="175" y="215" width="45" height="51"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -216,16 +217,15 @@
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="mO5-YG-z5g"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <constraints>
-                            <constraint firstItem="joi-qj-uCt" firstAttribute="leading" secondItem="mO5-YG-z5g" secondAttribute="leading" constant="122" id="MAD-O5-Hfl"/>
-                            <constraint firstItem="joi-qj-uCt" firstAttribute="top" secondItem="mO5-YG-z5g" secondAttribute="top" constant="210" id="UiC-rE-Ti6"/>
-                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="nNW-w4-6BE"/>
+                    <connections>
+                        <outlet property="nameLabel" destination="RII-F1-oAx" id="Nkt-Kh-0P8"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Lki-jI-oRg" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2040" y="109"/>
+            <point key="canvasLocation" x="3385.4961832061067" y="-183.09859154929578"/>
         </scene>
         <!--Sign Up View Controller-->
         <scene sceneID="LmX-OT-VRW">
@@ -292,7 +292,7 @@
                                     <action selector="fe:" destination="Th8-Wu-maz" eventType="touchUpInside" id="J7P-GU-zv4"/>
                                     <action selector="signUpBtn:" destination="Th8-Wu-maz" eventType="touchUpInside" id="CP3-uc-CZH"/>
                                     <action selector="signupButtonPressed:" destination="oag-93-ky8" eventType="touchUpInside" id="9xy-mT-7Ao"/>
-                                    <segue destination="ji3-Bh-4Pf" kind="show" identifier="LoginScreen" id="e9b-Nf-Bhl"/>
+                                    <segue destination="Ke4-5F-qvB" kind="show" identifier="SignUp2Screen" id="rgA-7H-lJc"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -317,9 +317,9 @@
                     </view>
                     <navigationItem key="navigationItem" id="mby-jK-Vkz"/>
                     <connections>
-                        <outlet property="emailTextField" destination="vf0-4b-kbj" id="8Yu-JW-whc"/>
-                        <outlet property="passwordTextField" destination="xOs-ub-Q9a" id="kwe-AV-SJn"/>
                         <outlet property="signUpButton" destination="X2b-D0-dd5" id="k33-Z3-Wp3"/>
+                        <outlet property="signUpEmailTextField" destination="vf0-4b-kbj" id="CPB-V7-Rcv"/>
+                        <outlet property="signUpPasswordTextField" destination="xOs-ub-Q9a" id="Y5V-jb-H5S"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LoN-nB-06x" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -327,9 +327,121 @@
             </objects>
             <point key="canvasLocation" x="1192" y="-525"/>
         </scene>
+        <!--Sign Up 2 View Controller-->
+        <scene sceneID="iQp-zO-dhK">
+            <objects>
+                <viewController storyboardIdentifier="SignUp2ViewController" title="Sign Up 2 View Controller" id="Ke4-5F-qvB" customClass="SignUp2ViewController" customModule="IOSPROJECTAPP" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="0Qi-FS-IRs">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pet Tasker" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="60K-nq-qK0">
+                                <rect key="frame" x="49" y="99" width="296" height="86"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="86" id="4Y0-dX-ZL7"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="black" pointSize="50"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="First Name" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cSx-Mq-g8Y">
+                                <rect key="frame" x="67.333333333333343" y="287" width="260.33333333333326" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <action selector="emailTxtBox:" destination="Th8-Wu-maz" eventType="editingDidEnd" id="PQ4-OD-XRJ"/>
+                                </connections>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Last Name" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Vtg-QV-BbZ">
+                                <rect key="frame" x="67.333333333333343" y="357" width="260.33333333333326" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <action selector="passwordTxtBox:" destination="Th8-Wu-maz" eventType="editingDidEnd" id="ZVg-K5-VIS"/>
+                                </connections>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zvx-ed-q0h">
+                                <rect key="frame" x="85" y="688" width="223" height="65"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="223" id="0No-fj-fkp"/>
+                                    <constraint firstAttribute="height" constant="65" id="drE-Jf-70q"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled" cornerStyle="capsule">
+                                    <attributedString key="attributedTitle">
+                                        <fragment content="Sign Up">
+                                            <attributes>
+                                                <font key="NSFont" size="24" name="Helvetica"/>
+                                                <font key="NSOriginalFont" size="12" name="Helvetica"/>
+                                            </attributes>
+                                        </fragment>
+                                    </attributedString>
+                                    <color key="baseForegroundColor" systemColor="labelColor"/>
+                                    <color key="baseBackgroundColor" systemColor="systemOrangeColor"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="fe:" destination="Th8-Wu-maz" eventType="touchUpInside" id="o5c-UV-FOJ"/>
+                                    <action selector="signUp2ButtonPressed:" destination="Ke4-5F-qvB" eventType="touchUpInside" id="XfR-bt-4yw"/>
+                                    <action selector="signUpBtn:" destination="Th8-Wu-maz" eventType="touchUpInside" id="3VY-vR-cN2"/>
+                                    <action selector="signupButtonPressed:" destination="oag-93-ky8" eventType="touchUpInside" id="CfT-PL-deh"/>
+                                    <segue destination="R7x-DF-rbJ" kind="show" identifier="MainScreen" id="SEc-1x-YAm"/>
+                                </connections>
+                            </button>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Suburb" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0oa-L7-PJK">
+                                <rect key="frame" x="67" y="424" width="261" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <action selector="passwordTxtBox:" destination="Th8-Wu-maz" eventType="editingDidEnd" id="d1H-3E-gax"/>
+                                </connections>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Enter Personal Details" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Me-MO-T0X">
+                                <rect key="frame" x="24" y="193" width="344" height="86"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="86" id="ZaW-cK-2VN"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="black" pointSize="30"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="KfQ-k9-S1T"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="0oa-L7-PJK" firstAttribute="top" secondItem="Vtg-QV-BbZ" secondAttribute="bottom" constant="33" id="5lW-kH-JXl"/>
+                            <constraint firstItem="Vtg-QV-BbZ" firstAttribute="leading" secondItem="KfQ-k9-S1T" secondAttribute="leading" constant="67.333333333333343" id="8w8-CC-xs7"/>
+                            <constraint firstItem="1Me-MO-T0X" firstAttribute="leading" secondItem="60K-nq-qK0" secondAttribute="leading" constant="-25" id="HNP-sJ-0Dy"/>
+                            <constraint firstItem="KfQ-k9-S1T" firstAttribute="bottom" secondItem="zvx-ed-q0h" secondAttribute="bottom" constant="65" id="I2l-qI-Fdg"/>
+                            <constraint firstItem="cSx-Mq-g8Y" firstAttribute="top" secondItem="1Me-MO-T0X" secondAttribute="bottom" constant="8" id="K0D-Gb-voV"/>
+                            <constraint firstItem="0oa-L7-PJK" firstAttribute="leading" secondItem="KfQ-k9-S1T" secondAttribute="leading" constant="67" id="LRO-4M-Pag"/>
+                            <constraint firstItem="1Me-MO-T0X" firstAttribute="trailing" secondItem="cSx-Mq-g8Y" secondAttribute="trailing" constant="41.333333333333371" id="Nif-oZ-p6J"/>
+                            <constraint firstItem="1Me-MO-T0X" firstAttribute="trailing" secondItem="60K-nq-qK0" secondAttribute="trailing" constant="24" id="U8N-6h-YwY"/>
+                            <constraint firstItem="1Me-MO-T0X" firstAttribute="leading" secondItem="Vtg-QV-BbZ" secondAttribute="leading" constant="-43.333333333333343" id="ZH3-HD-EBN"/>
+                            <constraint firstItem="Vtg-QV-BbZ" firstAttribute="top" secondItem="cSx-Mq-g8Y" secondAttribute="bottom" constant="36" id="iYP-HB-wZ0"/>
+                            <constraint firstItem="1Me-MO-T0X" firstAttribute="trailing" secondItem="Vtg-QV-BbZ" secondAttribute="trailing" constant="41.333333333333371" id="kIJ-Oc-cqp"/>
+                            <constraint firstItem="zvx-ed-q0h" firstAttribute="centerX" secondItem="0Qi-FS-IRs" secondAttribute="centerX" id="lfe-uU-wBL"/>
+                            <constraint firstItem="0oa-L7-PJK" firstAttribute="centerX" secondItem="Vtg-QV-BbZ" secondAttribute="centerX" id="ndb-Ac-YIL"/>
+                            <constraint firstItem="1Me-MO-T0X" firstAttribute="centerX" secondItem="zvx-ed-q0h" secondAttribute="centerX" id="oa6-oE-pzU"/>
+                            <constraint firstItem="1Me-MO-T0X" firstAttribute="top" secondItem="60K-nq-qK0" secondAttribute="bottom" constant="8" id="rcb-z2-2X6"/>
+                            <constraint firstItem="1Me-MO-T0X" firstAttribute="leading" secondItem="cSx-Mq-g8Y" secondAttribute="leading" constant="-43.333333333333343" id="tYw-Iw-70j"/>
+                            <constraint firstItem="Vtg-QV-BbZ" firstAttribute="top" secondItem="0Qi-FS-IRs" secondAttribute="top" constant="357" id="uqQ-rg-aQD"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="efj-iw-TWZ"/>
+                    <connections>
+                        <outlet property="signUp2Button" destination="zvx-ed-q0h" id="feQ-ki-cr6"/>
+                        <outlet property="signUpFirstName" destination="cSx-Mq-g8Y" id="bzr-rz-8oK"/>
+                        <outlet property="signUpLastName" destination="Vtg-QV-BbZ" id="SZQ-Hp-Y4t"/>
+                        <outlet property="signUpSuburb" destination="0oa-L7-PJK" id="Gfq-zE-dUb"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bPj-5I-Hs0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2003.8167938931297" y="-526.05633802816908"/>
+        </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="e9b-Nf-Bhl"/>
+        <segue reference="SEc-1x-YAm"/>
     </inferredMetricsTieBreakers>
     <resources>
         <systemColor name="labelColor">
